--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url("/Registration-form-20220622T040604Z-001/Registration-form/images/bg-intro-desktop.png");
+  background-image: url("images/bg-intro-desktop.png");
   background-color: hsl(0, 100%, 74%);
   font-family: "Poppins", sans-serif;
   height: 100vh;
@@ -42,6 +42,8 @@ h1 {
 .error {
   display: none;
   color: hsl(0, 100%, 74%);
+  font-size: x-small;
+  margin-top: -8px;
 }
 
 form {
@@ -100,6 +102,14 @@ input:focus {
   /* border: none; */
 }
 
+#submit:hover {
+  background-color: hsla(154, 59%, 51%, 0.8);
+}
+
+#submit:active {
+  background-color: hsla(154, 59%, 51%, 0.8);
+}
+
 input:not(:focus):not(:placeholder-shown):valid {
   outline: none;
   border: none;
@@ -116,11 +126,12 @@ input:not(:focus):not(:placeholder-shown):invalid ~ .error {
 }
 
 input:not(:focus):not(:placeholder-shown):invalid {
-  background-image: url("/Registration-form-20220622T040604Z-001/Registration-form/images/icon-error.svg");
+  background-image: url("images/icon-error.svg");
   border: 2px solid hsl(0, 100%, 74%);
   background-repeat: no-repeat;
   background-position: right;
   background-origin: content-box;
+  background-size: 5%;
 }
 
 a {
@@ -129,18 +140,28 @@ a {
   font-weight: 700;
 }
 
-/* @media (max-width:768px) {
-  main {
-    height: auto;
-    padding: 50px 0;
-    font-size: smaller;
+@media (max-width: 768px) {
+  h1 {
+    font-size: x-large;
   }
-} */
+
+  p {
+    font-size: x-small;
+  }
+
+  .error {
+    font-size: xx-small;
+  }
+
+  input:not(:focus):not(:placeholder-shown):invalid {
+    background-size: 10%;
+  }
+}
 @media (max-width: 425px) {
   body {
-    background-image: url("/Registration-form-20220622T040604Z-001/Registration-form/images/bg-intro-desktop.png");
+    background-image: url("images/bg-intro-desktop.png");
   }
-  
+
   main {
     flex-direction: column;
     height: auto;
