--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ a {
 
   #submit {
     font-size: smaller;
-    font-weight: 100;
+    /* font-weight: 100; */
   }
   .small {
     font-size: xx-small;
